data/derived/comb/progs/unify/prog1410.ml.out
Characters 33-34:
  eval(Clamp(Sine(VarX),VarX,VarY),1,2);;
                                   ^
Error: This expression has type int but an expression was expected of type
         float
